register view rendered and setup

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,7 @@
 
                   <div class="form-outline mb-4">
                     <input type="email" id="form2Example11" class="form-control" placeholder="Email address" />
-                    <label class="form-label" for="form2Example11">Username</label>
+                    <label class="form-label" for="form2Example11">Email</label>
                   </div>
 
                   <div class="form-outline mb-4">
@@ -47,7 +47,6 @@
                     <button class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3" type="submit">
                       Log in
                     </button>
-                    <p class="text-muted" href="#!">Forgot password?</p>
                   </div>
                 </form>
                 <form action="/register" method="GET">
