Add register route

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -34,12 +34,12 @@
                   <p>Please Register your new account</p>
 
                   <div class="form-outline mb-4">
-                    <input type="email" id="form2Example11" class="form-control" placeholder="Email address" />
+                    <input type="email" name="email" id="form2Example11" class="form-control" placeholder="Email address" />
                     <label class="form-label" for="form2Example11">Email</label>
                   </div>
 
                   <div class="form-outline mb-4">
-                    <input type="password" id="form2Example22" class="form-control" />
+                    <input type="password" name="password" id="form2Example22" class="form-control" />
                     <label class="form-label" for="form2Example22">Password</label>
                   </div>
 
