leaflet api added to map_landing page

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8,6 +8,11 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+
+#map {
+  height: 60em;
+}
+
 body {
   font-family: "Open Sans", sans-serif;
   color: #272829;
