--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8,7 +8,17 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+.btn-close{
+  z-index: 999999999;
+  background-color: blue;
+  outline: none;
+  margin-top: 47px;
+  margin-right: 4px;
+}
+.btn-group{
+  position: relative;
 
+}
 #toronto {
   height: 60em;
 }
@@ -212,7 +222,7 @@ h6 {
 /* Mobile Navigation */
 .mobile-nav-toggle {
   position: fixed;
-  right: 15px;
+  right: 50px;
   top: 15px;
   z-index: 9998;
   border: 0;
