--- a/views/map_landing.ejs
+++ b/views/map_landing.ejs
@@ -119,15 +119,8 @@
             <div class="col-lg-12 d-flex justify-content-center">
               <ul id="portfolio-flters">
                 <li data-filter="*" class="filter-active">All Maps</li>
-                <li data-filter=".filter-app">
-
-                  <button id="favourite-btn">Favorite Maps</button>
-                </li>
+                <li data-filter=".filter-app"id="favourite-btn">Favorite Maps</li>
               </ul>
-
-
-
-
             </div>
           </div>
         </div>
