Update maps buttons

--- a/views/map_landing.ejs
+++ b/views/map_landing.ejs
@@ -238,7 +238,7 @@
                     data-bs-toggle="modal"
                     data-bs-target="#staticBackdrop1"
                   >
-                    Launch static backdrop modal
+                    Open Map
                   </button>
                   <a href="portfolio-details.html" title="More Details"
                     ><i class="bx bx-link"></i
@@ -262,7 +262,7 @@
                     data-bs-toggle="modal"
                     data-bs-target="#staticBackdrop2"
                   >
-                    Launch static backdrop modal
+                    Open Map
                   </button>
                   <a href="portfolio-details.html" title="More Details"
                     ><i class="bx bx-link"></i
@@ -286,7 +286,7 @@
                     data-bs-toggle="modal"
                     data-bs-target="#staticBackdrop3"
                   >
-                    Launch static backdrop modal
+                    Open Map
                   </button>
                   <a href="portfolio-details.html" title="More Details"
                     ><i class="bx bx-link"></i
