--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11,7 +11,7 @@
 .btn-close {
   z-index: 999999999;
   background-color: blue;
-  outline: none;
+  /* outline: none; */
   margin-top: 47px;
   margin-right: 4px;
 }
