--- a/views/map_favourite.ejs
+++ b/views/map_favourite.ejs
@@ -111,7 +111,6 @@
           <div class="section-title">
             <h2>Maps</h2>
 
-
             <div id="map"></div>
           </div>
 
@@ -119,110 +118,16 @@
             <div class="col-lg-12 d-flex justify-content-center">
               <ul id="portfolio-flters">
                 <li data-filter="*" class="filter-active">All Maps</li>
-                <li data-filter=".filter-app"id="favourite-btn">Favorite Maps</li>
+                <li data-filter=".filter-app" id="favourite-btn">
+                  Favorite Maps
+                </li>
               </ul>
             </div>
           </div>
         </div>
 
         <div class="communityMaps">
-
-          <!-- Toronto Modal -->
-          <div
-            class="modal fade"
-            id="staticBackdrop1"
-            data-bs-backdrop="static"
-            data-bs-keyboard="false"
-            tabindex="-1"
-            aria-labelledby="staticBackdropLabel"
-            aria-hidden="true"
-          >
-            <div class="modal-dialog modal-fullscreen">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="staticBackdropLabel">
-                    Modal title
-                  </h5>
-                  <button
-                    type="button"
-                    class="btn-close"
-                    data-bs-dismiss="modal"
-                    aria-label="Close"
-                  ></button>
-                </div>
-                <div class="modal-body">
-                  <div id="toronto"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-            <!-- Montreal Modal -->
-            <div
-            class="modal fade"
-            id="staticBackdrop2"
-            data-bs-backdrop="static"
-            data-bs-keyboard="false"
-            tabindex="-1"
-            aria-labelledby="staticBackdropLabel"
-            aria-hidden="true"
-          >
-            <div class="modal-dialog modal-fullscreen">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="staticBackdropLabel">
-                    Modal title
-                  </h5>
-                  <button
-                    type="button"
-                    class="btn-close"
-                    data-bs-dismiss="modal"
-                    aria-label="Close"
-                  ></button>
-                </div>
-                <div class="modal-body">
-                  <div id="toronto"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-           <!-- Vancouver Modal -->
-           <div
-           class="modal fade"
-           id="staticBackdrop3"
-           data-bs-backdrop="static"
-           data-bs-keyboard="false"
-           tabindex="-1"
-           aria-labelledby="staticBackdropLabel"
-           aria-hidden="true"
-         >
-           <div class="modal-dialog modal-fullscreen">
-             <div class="modal-content">
-               <div class="modal-header">
-                 <h5 class="modal-title" id="staticBackdropLabel">
-                   Modal title
-                 </h5>
-                 <button
-                 type="button"
-                 class="btn-close"
-                 data-bs-dismiss="modal"
-                 aria-label="Close"
-               ></button>
-               </div>
-               <div class="modal-body">
-                 <div id="toronto"></div>
-               </div>
-             </div>
-           </div>
-         </div>
-
-          <!-- MAPS PORTFOLIO -->
-          <div
-            class="row portfolio-container"
-            data-aos="fade-up"
-            data-aos-delay="100"
-          >
-          <!--Toronto Portifolio-->
+          <% for(let favourite in favourites) { %>
             <div class="col-lg-4 col-md-4 portfolio-item filter-app">
               <div class="portfolio-wrap">
                 <img
@@ -246,57 +151,12 @@
                 </div>
               </div>
             </div>
-            <!--Montreal Portfolio-->
-            <div class="col-lg-4 col-md-4 portfolio-item filter-app">
-              <div class="portfolio-wrap">
-                <img
-                  src="assets/img/portfolio/montreal.jpg"
-                  class="img-fluid"
-                  alt=""
-                />
-                <div class="portfolio-links">
-                  <!-- Button trigger modal -->
-                  <button
-                    type="button"
-                    class="btn btn-primary"
-                    data-bs-toggle="modal"
-                    data-bs-target="#staticBackdrop2"
-                  >
-                    Open Map
-                  </button>
-                  <a href="portfolio-details.html" title="More Details"
-                    ><i class="bx bx-link"></i
-                  ></a>
-                </div>
-              </div>
-            </div>
-            <!--Vancouver Portifolio-->
-            <div class="col-lg-4 col-md-4 portfolio-item filter-app">
-              <div class="portfolio-wrap">
-                <img
-                  src="assets/img/portfolio/vancouver.jpg"
-                  class="img-fluid"
-                  alt=""
-                />
-                <div class="portfolio-links">
-                  <!-- Button trigger modal -->
-                  <button
-                    type="button"
-                    class="btn btn-primary"
-                    data-bs-toggle="modal"
-                    data-bs-target="#staticBackdrop3"
-                  >
-                    Open Map
-                  </button>
-                  <a href="portfolio-details.html" title="More Details"
-                    ><i class="bx bx-link"></i
-                  ></a>
-                </div>
-              </div>
-            </div>
+
+          <%}%>
+
+
         </div>
       </section>
-      <!-- End Portfolio Section -->
 
       <!-- ======= Contact Section ======= -->
       <section id="contact" class="contact">
@@ -440,5 +300,3 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
-
-
